# alcyone

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  alcyone-history.adoc  alcyone.adoc  alcyone.cbp  alcyone.cpp  alcyone.h  alcyoneServer.cpp  alcyoneServer.h  config.h.in  cylon.cpp  debounce.cpp  debounce.h  flare.cpp  flare.h  log.cpp  log.h  mcp23008.cpp  mcp23008.h  midi.cpp  midi.h  rawmcp.cpp  schematic.fzz  serial.cpp  serial.h  serialdevice.cpp  serialdevice.h  testmcp.cpp  web++.hpp  webservice.cpp
alcyone-control/: pom.xml
alcyone-control/alcyone-android/: AndroidManifest.xml  pom.xml
alcyone-control/alcyone-android/res/values/: strings.xml
alcyone-control/alcyone-android/src/main/java/com/redhat/osas/alcyone/: HelloAndroidActivity.java
alcyone-control/alcyone-protocol/: pom.xml
alcyone-control/alcyone-swing/: pom.xml
alcyone-control/android/: AndroidManifest.xml  pom.xml
alcyone-control/android/res/layout/: main.xml  preferences.xml
alcyone-control/android/res/menu/: alcyone_menu.xml
alcyone-control/android/res/values/: strings.xml  theme.xml
alcyone-control/android/res/xml/: preferences.xml
alcyone-control/protocol/: pom.xml
alcyone-control/swing/: pom.xml
include/: debounce.h  mcp23008.h  midi.h  serialdevice.h  web++.hpp  webservice.h
src/: CMakeLists.txt  alcyone.cpp  debounce.cpp  flare.cpp  log.cpp  serialdevice.cpp
wiringPiStub/: CMakeLists.txt  wiringPi.c  wiringPi.c.save  wiringPiI2C.c  wiringSerial.c
www/: README  index.html
www/css/: alcyone.css  alcyone.css~
(+20 files in other folders)
